# kaad

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _main  binaryOps.h  binaryOps.hpp  build.sh  compGraph.h  compGraph.hpp  dispatchers.h  dispatchers.hpp  exceptions.cpp  exceptions.hpp  gradients.h  gradients.hpp  install.sh  kaad.h  kaad.hpp  kernels.h  kernels.hpp  main.cpp  new_compGraph.h  nodes.h  nodes.hpp  operations.h  operations.hpp  recorder.h  scalar.hpp  strides.h  strides.hpp  tensor.h  tensor.hpp  tmp  todo.md  todo.txt  (+5 more)
.github/workflows/: doxygen.yml
cmake/: kaadConfig.cmake.in
computation_graph/: common.hpp  compGraph.hpp  computation_graph.cpp  computation_graph.hpp  dispatchers.hpp  node_handle.hpp  nodes.hpp  strides.hpp
computation_graph/nodes/: batch_matmul.cpp  batch_matmul.hpp  binary.hpp  binary_flex.hpp  dispatchers.hpp  dot.cpp  dot.hpp  inode.cpp  inode.hpp  input.hpp  matmul.cpp  matmul.hpp  mean.cpp  mean.hpp  mean_dim.cpp  mean_dim.hpp  nodes.hpp  outer.cpp  outer.hpp  slice.cpp  slice.hpp  sum_dim.cpp  sum_dim.hpp  transp.cpp  transp.hpp  unary.hpp  valued.hpp
computation_graph/operators/: binaryOps.hpp  binary_operators.cpp  binary_operators.hpp  dispatchers.hpp  dot.cpp  dot.hpp  matmul.cpp  matmul.hpp  mean.cpp  mean.hpp  operators.hpp  outer.cpp  outer.hpp  slice.cpp  slice.hpp  sum.cpp  sum.hpp  transpose.cpp  transpose.hpp  unaryOps.hpp  unary_operators.cpp  unary_operators.hpp
docs/: api.md  broadcasting.md  conf.py  getting_started.md  graph.md  index.md  mainpage.md  max_rank.md  operators.md  tensor_layout.md  terminology.md  theory.md
examples/: CMakeLists.txt  broadcast_add.cpp  dot_product.cpp  matmul.cpp  transpose.cpp
functions/: adjoint_ops.hpp  kernels.hpp  primal.hpp  primal_ops.hpp  safe_kernels.hpp
graph/: common.hpp  computation_graph.cpp  computation_graph.hpp  dispatchers.hpp  node_handle.hpp
graph/nodes/: batch_matmul.cpp  batch_matmul.hpp  binary.hpp  binary_flex.hpp  dot.cpp  dot.hpp  inode.cpp  inode.hpp  input.hpp  matmul.cpp  matmul.hpp  mean.cpp  mean.hpp  mean_dim.cpp  mean_dim.hpp  nodes.hpp  outer.cpp  outer.hpp  slice.cpp  slice.hpp  sum_dim.cpp  sum_dim.hpp  transp.cpp  transp.hpp  unary.hpp
graph/operators/: binary_operators.cpp  dot.cpp  exceptions.hpp  matmul.cpp  mean.cpp  operators.hpp  outer.cpp  slice.cpp  sum.cpp  transpose.cpp  unary_operators.cpp
include/kaad/: enums.hpp  exceptions.hpp  kaad.hpp  max_rank.hpp  mutability_enum.hpp  scalar.hpp  static_span.hpp  static_vector.hpp
include/kaad/functions/: adjoint.hpp  batch_matmul.hpp  dot_product.hpp  flexible.hpp  full_reduce.hpp  kernels.hpp  matmul.hpp  outer.hpp  pointwise.hpp  primal.hpp  reduce.hpp  reduction_policies.hpp  safe_kernels.hpp  slice.hpp  transpose.hpp
include/kaad/graph/: common.hpp  computation_graph.hpp  dispatchers.hpp  graph.hpp  inode.hpp  node_handle.hpp  operator_node.hpp
include/kaad/graph/internal/: inode.hpp
include/kaad/graph/nodes/: batch_matmul.hpp  binary.hpp  binary_flex.hpp  dot.hpp  inode.hpp  input.hpp  matmul.hpp  mean.hpp  mean_dim.hpp  outer.hpp  slice.hpp  sum_dim.hpp  transp.hpp  unary.hpp
include/kaad/graph/operators/: operators.hpp
include/kaad/graph/operators/internal/: safe_kernels.hpp
include/kaad/operations/: dot_product.hpp  flexible.hpp  full_reduce.hpp  kernels.hpp  matmul.hpp  outer.hpp  pointwise.hpp  reduce.hpp  reduction_policies.hpp  slice.hpp  strided.hpp  transpose.hpp
include/kaad/operators/: operators.hpp
include/kaad/operators/internal/: kernels.hpp  safe_kernels.hpp
include/kaad/tensor/: common.hpp  iterator_impl.hpp  print_tensor.hpp  tensor.hpp  tensor_types.hpp  tensor_view.hpp
include/kaad/tensor/internal/: iterator_impl.hpp  print_tensor.hpp  tensor.hpp  tensor_types.hpp
src/: CMakeLists.txt  exceptions.cpp
src/functions/: batch_matmul.cpp  dot_product.cpp  flexible.cpp  matmul.cpp  outer.cpp  reduce.cpp  slice.cpp  transpose.cpp
src/graph/: common.hpp  computation_graph.cpp  graph.cpp  input_node.hpp  node_handle.cpp  operation_concept.hpp  operator_node.hpp
src/graph/nodes/: batch_matmul.cpp  batch_matmul.hpp  binary.hpp  binary_flex.hpp  dot.cpp  dot.hpp  inode.cpp  input.hpp  matmul.cpp  matmul.hpp  mean.cpp  mean_dim.cpp  mean_dim.hpp  outer.cpp  outer.hpp  slice.cpp  slice.hpp  sum_dim.cpp  sum_dim.hpp  transp.cpp  transp.hpp  unary.hpp
src/graph/operators/: binary_operators.cpp  dot.cpp  input.cpp  matmul.cpp  mean.cpp  outer.cpp  slice.cpp  sum.cpp  transpose.cpp  unary_operators.cpp
src/operations/: broadcast.cpp  broadcast.hpp  dot_product.cpp  dot_product.hpp  flexible.cpp  full_reduce.hpp  matmul.cpp  matmul.hpp  operation_concept.hpp  outer.cpp  outer.hpp  pointwise.hpp  reduce.cpp  reduce.hpp  reduction_policies.hpp  safe_kernels.hpp  slice.cpp  slice.hpp  strided.cpp  strided.hpp  transpose.cpp  transpose.hpp
src/operators/: binary_operators.cpp  dot.cpp  input.cpp  matmul.cpp  mean.cpp  outer.cpp  slice.cpp  sum.cpp  transpose.cpp  unary_operators.cpp
src/tensor/: common.cpp  print_tensor.cpp  print_tensor.hpp  tensor.cpp  tensor_view.cpp
tensor/: common.hpp  tView.hpp  tensor.cpp  tensor.hpp  tensor_view.cpp  tensor_view.hpp  todo.txt
tensorfuncs/: adjoint_ops.hpp  gradients.hpp  kernels.hpp  primal_ops.hpp  safe_kernels.hpp  strides.hpp
tests/: .clang-tidy  CMakeLists.txt  all_operators.cpp  binary_op.cpp  binary_op.py  check_tensor.hpp  dot.cpp  dot.py  matmul.cpp  matmul.py  test_binary_broadcasts.cpp  test_call_all_kernels.cpp  test_dot_product.cpp  test_matmul.cpp  test_mean.cpp  test_outer.cpp  test_slice.cpp  test_sum.cpp  test_transpose.cpp  test_unary_operations.cpp  transp.cpp  transp.py
